<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/imgDetalleFondo"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:src="@android:color/darker_gray"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvDetalleTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Título de la Película"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold"

            android:layout_margin="24dp"

            android:shadowColor="#E6000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="10"

            app:layout_constraintBottom_toBottomOf="@id/imgDetalleFondo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvDetalleSubtitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text=""
            android:textColor="#616161"
            android:textSize="16sp"
            android:textStyle="bold"

            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"

            app:layout_constraintTop_toBottomOf="@id/imgDetalleFondo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvDetalleDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text=""
            android:textSize="16sp"
            android:textColor="#212121"
            android:lineSpacingExtra="6dp"

            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"

            app:layout_constraintTop_toBottomOf="@id/tvDetalleSubtitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnVerTrailer"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/btn_watch_trailer"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/black"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp"

            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"

            app:layout_constraintTop_toBottomOf="@id/tvDetalleDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvComentariosTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_comments"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/btnVerTrailer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/layoutEscribirComentario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/tvComentariosTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etNuevoComentario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_write_comment" />

            <ImageButton
                android:id="@+id/btnEnviarComentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_send"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerComentarios"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/layoutEscribirComentario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <ProgressBar
            android:id="@+id/progressLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_loading"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>